--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "sass": "^1.59.3",
     "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.4"
   },
