--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +23,7 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.59.3",
     "socket.io-client": "^4.5.4",
+    "stripe": "^12.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
