--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "sass": "^1.59.3",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.5.4",
     "stripe": "^12.1.1",
     "web-vitals": "^2.1.4"
